# vector-observatory

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py  state.py
app/components/: filter_bar.py  metrics_card.py  neighbor_panel.py
app/views/: __init__.py  detail.py  experiment_list.py  new_experiment.py  tab_clusters.py  tab_dedup.py  tab_drift.py  tab_explore.py  tab_hard_negatives.py  tab_metrics.py  tab_outliers.py  tab_overview.py  tab_rerun.py
data/: movies_demo.parquet
examples/: basic_analysis.py  drift_comparison.py  neighbor_inspection.py
scripts/: generate_demo.py
tests/fixtures/: synthetic.py
tests/integration/: test_pipeline.py
tests/unit/: test_clustering.py  test_dataset.py  test_metrics.py  test_reducers.py  test_storage.py
vector_observatory/: __init__.py  dataset.py  schema.py
vector_observatory/clustering/: __init__.py  base.py  dbscan.py  hdbscan_.py  kmeans.py
vector_observatory/deduplication/: __init__.py  near_duplicates.py
vector_observatory/drift/: __init__.py  comparison.py
vector_observatory/ingestion/: __init__.py  csv.py  json_.py  parquet.py  validators.py
vector_observatory/metrics/: __init__.py  cluster.py  geometry.py  outliers.py  stability.py
vector_observatory/pipeline/: __init__.py  pipeline.py  result.py
vector_observatory/reducers/: __init__.py  base.py  pca.py  tsne.py  umap.py
vector_observatory/retrieval/: __init__.py  hard_negatives.py  knn.py
vector_observatory/storage/: __init__.py  experiment.py  store.py
(+5 files in other folders)
