[project]
name = "vector-observatory"
version = "0.1.0"
description = "Observability and debugging for embedding spaces."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["embeddings", "mlops", "observability", "vector-search", "rag", "umap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "duckdb>=0.10",
    "plotly>=5.18",
]

[project.optional-dependencies]
app = ["streamlit>=1.31"]
# gpu: install via conda with `conda install -c rapidsai cuml` (CUDA + Linux only)

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vector_observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vector_observatory"]
